# mecanumbot_gui

./: .dockerignore  .gitignore  DEPLOYMENT_CHECKLIST.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LED_CONTROL_README.md  README.md  app.py  controller_bridge.py  pytest.ini  quick_start.sh  requirements.txt  run_with_bridge.ps1  run_with_bridge.sh  start_system.ps1  start_system.sh
button_mapping_ros/: package.xml  setup.cfg  setup.py
button_mapping_ros/button_mapping_ros/: mapping_listener.py
controller_rules/: README-xbox360-wireless-rules.md
fake_robot/: fake_robot_node.py  run_fake_robot.sh
fake_robot_pkg/: README.md  package.xml  setup.cfg  setup.py
fake_robot_pkg/fake_robot_pkg/: fake_controller_node.py
host/: Dockerfile  app.py  docker_node.py  requirements.txt  start_docker.sh
host/templates/: action_creation.html  button_mapping.html  landing.html  main_dashboard.html  map_controls.html
robot/: install_controller_rules.sh  install_xbox360_rules.sh  requirements.txt  start_ros_nodes.sh
robot/button_mapping_ros/: database.py  database_interface.py  package.xml  setup.py
robot/button_mapping_ros/button_mapping_ros/: button_mapping_ros  database.py  database_interface.py  mapping_listener.py
robot/button_mapping_ros/launch/: bringup.launch.py
robot/controller_pkg/: package.xml  setup.cfg  setup.py
robot/controller_pkg/controller_pkg/: __init__.py  controller_node.py
robot/controller_rules/: 99-ps4-controller.rules  99-xbox360-wireless.rules
robot/xbox_controller_pkg/: package.xml  setup.py
shared/: database.py  database_interface.py
shared/mecanumbot_msgs/: CMakeLists.txt
templates/: button_mapping.html  configure.html  dashboard.html  index.html  landing.html  map_buttons.html  map_controls.html  map_joysticks.html  success.html
tests/: conftest.py  mock_database.py  run_tests.sh  test_app_api.py  test_controller_node.py  test_database.py  test_docker_node.py  test_flask_routes.py  test_js_map_controls.js  test_mapping_listener.py
xbox_controller_pkg/: README.md  install.sh  package.xml  setup.cfg  setup.py
xbox_controller_pkg/config/: xbox_controller_config.yaml
xbox_controller_pkg/launch/: xbox_controller_launch.py
xbox_controller_pkg/test/: test_xbox_controller_node.py
xbox_controller_pkg/xbox_controller_pkg/: __init__.py  controller_diagnostics.py  test_controller.py  xbox_controller_node.py
(+5 files in other folders)
