<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xbox_controller_pkg</name>
  <version>1.0.0</version>
  <description>ROS 2 package for Xbox 360 controller integration with button event publishing</description>
  
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>
  
  <url type="website">https://github.com/yourusername/mecanumbot_microcontrollers</url>
  <url type="bugtracker">https://github.com/yourusername/mecanumbot_microcontrollers/issues</url>
  <url type="repository">https://github.com/yourusername/mecanumbot_microcontrollers</url>
  
  <author email="your.email@example.com">Your Name</author>
  
  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>joy</depend>
  
  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <!-- Export information -->
  <export>
    <build_type>ament_python</build_type>
  </export>
  
</package>